src/app/components/form/form.component.css
/* General rules */

form.domain {
  background-color: var(--primary-color-lighter);
  border: 1px solid var(--primary-color-light);
  border-radius: 1rem;
  padding: 4rem;
}


@media(max-width:767px){
  form.domain {
    padding: 1.5rem;
  }
}

.domain .is-invalid label {
  color: #b51222!important;
}

.domain .invalid-feedback {
  width: 100%;
  padding: 0.25rem 0.5rem;
  margin-top: 0.1rem;
  font-size: 0.875rem;
  line-height: 1.5;
  color: #fff;
  background-color: #b51222;
  border-radius: 0.25rem;
  text-align: left;
}

.domain .row {
  --bs-gutter-x: 0.5rem;
}


/* Advanced options */

#advanced-options .form-label {
  margin-bottom: 0;
}

#advanced-options > fieldset:first-of-type {
  margin-top: 1rem;
}

#advanced-options > fieldset:last-of-type {
  margin-bottom: 1rem;
}

.domain .info-notice {
  width: auto;
  text-align: center;
  margin: 1rem auto 0 auto;
  display: flex;
  align-items: center;
}

.domain .info-notice div {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  white-space: pre-wrap;
}

.domain button.delete {
  font-size: calc(1.5rem - 2px);
  padding: .0rem .5rem;
  border: none;
  border: 1px solid transparent;
}

.domain button.delete:focus-visible,
.domain button.delete:hover {
  border-color: var(--primary-color);
  box-shadow: 0 0 0 0.25rem var(--outline-focus-color);
}

hr {
  opacity: 1;
  border-color: var(--primary-color-light);
}

.domain .form-section fieldset {
  display: flex;
  gap: 0.5rem;
  margin-bottom: 0.5rem;
}

.domain .domain-input-group {
  display: flex;
  margin-bottom: 1em;
}

/* Advanced options responsivity */

@media(min-width:768px) {
  /* Hide Legends and Labels from screen on wide screens but keep them for screen reader */
  .domain .form-section fieldset:not(:first-child) label,
  .domain .form-section fieldset legend {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    border: 0;
  }

  .domain .form-section fieldset .form-input-group > * {
    flex: 1;
  }

  .domain .form-section fieldset .form-input-group {
    display: flex;
    width: 100%;
    gap: 0.5rem;
  }

  .domain .form-section fieldset:first-child .form-input-group {
    display: grid;
    grid-auto-flow: column;

  }

  .domain .form-section.nameservers fieldset:first-child .form-input-group {
    grid-template: auto auto / 1fr 1fr;
  }

  .domain .form-section.ds-records fieldset:first-child .form-input-group {
    grid-template: auto auto / 1fr 1fr 1fr 1fr;
  }

  .domain .form-section fieldset:first-child .delete-button-container {
    margin-top: 2.2rem;
    display: flex;
    align-items: center;
  }
}

@media(max-width:767px) {
  .domain .form-section fieldset legend {
    font-size: 1.1em;
    margin-bottom: 0;
  }

  .domain .form-section fieldset {
    flex-direction: column;
    position: relative;
    margin-bottom: 1rem;
  }

  .domain .form-section fieldset:not(:last-child)::after {
    content: '';
    display: block;
    height: 1px;
    width: 50%;
    margin: auto;
    margin-top: 1rem;
    background: var(--primary-color-light);
  }

  .domain .form-section fieldset .form-input-group {
    display: grid;
    grid: auto / auto 1fr;
    gap: 0.5rem;
  }

  .domain .form-section fieldset .delete-button-container {
    position: absolute;
    top: -.25rem;
    right: 0;
  }
}

/* Advanced option switch */

.domain .switch-input-container {
  display: flex;
  align-items: center;
}

.domain .switch-input-container label {
  margin: 0;
}

.domain button.switch-toggle {
  border: none;
  width: 2em;
  background-color: var(--secondary-color);
  display: inherit;
  height: 1em;
  border-radius: 2em;
  border: 1px solid var(--secondary-color-darker);
  font-size: 2em;
  transition: background-color .25s ease-in-out,;
  margin-right: 0.2em;
  cursor: pointer;
  position: relative;
}

.domain button.switch-toggle::after {
  content: '';
  display: block;
  width: .8em;
  height: .8em;
  background-color: #fff;
  border: 1px solid var(--secondary-color-darker);
  left: calc(.1em - 1px);
  top: calc(.1em - 1px);
  position: absolute;
  transition: all .25s ease-in-out;
  border-radius: .8em;
}

.domain button.switch-toggle:focus-visible,
.domain button.switch-toggle:hover {
  background-color: var(--secondary-color-dark);
}

.domain button.switch-toggle.enabled:focus-visible,
.domain button.switch-toggle.enabled:hover {
  background-color: var(--primary-color-dark);
}

.domain button.switch-toggle:focus-visible {
  border-color: var(--primary-color);
}

.domain button.switch-toggle.enabled {
  background-position: right center;
  background-color: var(--primary-color);
  border-color: var(--primary-color-dark);
}

.domain button.switch-toggle.enabled::after {
  left: calc(100% - .9em);
  border: 1px solid var(--primary-color-dark);
}

/* Domain input */
.domain .domain-input-container {
  position: relative;
  flex: 1;
}

.domain .domain-form-container > label {
  font-size: 1.25rem;
}

#input-domain-form {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.domain button.launch {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.domain .reset-form {
  position: absolute;
  top: calc(0.5em + 1px);
  z-index: 100;
  right: 0.5rem;
}

.domain .reset-form button:not(:disabled):hover {
  opacity: 1;
}

.domain .reset-form button {
  border: none;
  opacity: 0.5;
  padding: 0;
}

.domain .progress-value {
  display: block;
  color: #000;
  position: absolute;
  right: 1rem;
  font-size: 2rem;
}

.domain .progress-result {
  width: 100%;
  height:100%;
  position: absolute;
  z-index: 20;
  top: 0;
}

.domain .progress-result .progress {
  height: 100%;
  opacity: .3;
}

